# brand

./: .env.example  .gitignore  .treefmt.toml  AGENTS.md  Makefile  README.md  TODO.md  TODO.md.example  animate_logo.py  brand.json  brick_blockify.py  colors.py  compose_logo.py  design-guide.toml  devenv.nix  elm-pages.config.mjs  elm-pages.nix  export_raster.py  generate_brand_json.py  generate_designs.py  generate_favicons.py  index.html  index.js  logo.cabal  style.css
.github/workflows/: deploy.yml  static.yml
agents/stories/: US-002-elm-codegen.md
app/: Animate.hs  Api.elm  BrandGen.hs  Compose.hs  Draft.hs  Effect.elm  ErrorPage.elm  Main.hs  Ports.elm  Shared.elm
app/Route/: Index.elm  Komponentit.elm  Responsiivisuus.elm  Saavutettavuus.elm  Typografia.elm
content/: colors.toml  logos.toml  varit.md
src/: Main.hs  SiteMeta.elm
src/Brand/: Colors.elm  DesignData.hs  ElmGen.hs  Json.hs  JsonLd.hs
src/Component/: Dialog.elm  DownloadButton.elm  LogoCard.elm  MobileDrawer.elm  Timeline.elm
src/DesignTokensGen/: ElmGen.hs  Toml.hs  Types.hs
src/Guide/: Colors.elm  Colors.hs  CssGen.hs  DesignData.hs  ElmGen.hs  Json.hs  JsonLd.hs  Logos.elm  Tokens.elm  Toml.hs  Types.hs
src/Logo/: Animate.hs  Blockify.hs  BrickLayout.hs  Compose.hs  Designs.hs  Favicons.hs  Raster.hs
tests/: TestSuite.hs
tests/Guide/: ElmGenSpec.hs  JsonSpec.hs
