cabal-version: 2.2
name:          logo-gen
version:       0.1.0.0
license:       BSD-3-Clause
build-type:    Simple

library
  exposed-modules:
    Guide.Types, Guide.Toml,
    Guide.Colors, Guide.DesignData, Guide.Json, Guide.JsonLd, Guide.ElmGen, Guide.CssGen
  hs-source-dirs: src
  ghc-options: -Wall
  default-language: GHC2021
  build-depends:
    base >=4.7 && <5, text, bytestring,
    directory, filepath,
    aeson, aeson-pretty, containers, vector,
    toml-parser

-- Generate design-guide JSON, JSON-LD, and Elm brand tokens.
executable brand-gen
  main-is: BrandGen.hs
  hs-source-dirs: app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: GHC2021
  build-depends:
    base >=4.7 && <5, logo-gen, text, bytestring, directory, filepath

test-suite logo-gen-tests
  type: exitcode-stdio-1.0
  main-is: TestSuite.hs
  other-modules:
    Guide.ColorsSpec, Guide.ElmGenSpec, Guide.JsonSpec
  hs-source-dirs: tests
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: GHC2021
  build-depends:
    base >=4.7 && <5, text, bytestring, aeson, logo-gen,
    tasty, tasty-hunit, tasty-quickcheck,
    temporary, process
